--- a/css/perfiles.css
+++ b/css/perfiles.css
@@ -6,11 +6,10 @@ body {
 }
 
 .page {
-  padding: 250px 6%;
+  padding: 200px 6%;
   display: flex; 
   justify-content: flex-start;
   position: relative;
-  padding-top: 100px;
 }
 
 .perfil {
@@ -37,7 +36,7 @@ body {
   height: 130px;
   border-radius: 50%;/*Circulo*/
   object-fit: cover;
-  border: 4px solid #fff;
+  border: 4px solid #ffffff;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   position: absolute;/*Flota sobre el contenedor de pefil*/
   top: -60px;
