--- a/css/procesoAdopcion.css
+++ b/css/procesoAdopcion.css
@@ -111,7 +111,7 @@
 }
 
 .paso .contenido p {
-  background-color: #fef8e7; /* Beige suave */
+  background-color: #fef8e7; 
   padding: 1rem;
   border-radius: 0.8rem;
   font-size: 0.95rem;
