--- a/css/misionVision.css
+++ b/css/misionVision.css
@@ -21,12 +21,14 @@ body {
 
 /*Imagen superior*/
 .hero .imagen img {
-  width: 50%;
+   width: 50%;          
   margin: 0 auto;
   display: block;
   position: relative;
   top: 40px;
   margin-right: 80px;
+  transform: scale(1.5);    
+  transform-origin: center bottom; 
 }
 
 /*Texto superior*/
@@ -67,7 +69,7 @@ body {
 }
 
 .hero .wave path {
-  fill: #ffffff; /* color de la curva inferior */
+  fill: #ffffff;
 }
 
 /*Sección de misión y visión*/
