--- a/css/reportes.css
+++ b/css/reportes.css
@@ -35,7 +35,7 @@ select::placeholder {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #FFFAE7; /* Beige */
+  background-color: #FFFAE7;
   box-shadow: 0px 6px 20px rgba(0,0,0,0.1);
   padding: 2.5rem;
   width: 400px;
