--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,19 @@ body {
   background: #D9EEFF;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 60px 11%;
+  justify-content: center;   
+  gap: 300px; 
+  padding: 0% 10%;
   position: relative;
   overflow: hidden; /*Oculta contenido que sobresalga del contenedor*/
+  height: 460px; 
 }
 
 /*Texto*/
 .hero .texto {
   width: 45%;
   text-align: left;
+  margin-top: -150px;
 }
 
 .hero .texto h2 {
@@ -27,6 +30,7 @@ body {
   font-weight: 900;
   margin-bottom: 10px;
   color: #000000;
+  white-space: nowrap; 
 }
 
 .hero .texto p {
@@ -37,16 +41,17 @@ body {
 
 /*Imagen perro y gato*/
 .hero .imagen {
-  width: 45%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .hero .imagen img {
-  max-width: 100%;
+  max-width: 95%;
   height: auto;
   object-fit: contain;
+  transform: translateY(-80px);
 }
 
 /*Efecto curva*/
@@ -55,7 +60,7 @@ body {
   bottom: -2px;
   left: 0;
   width: 100%;
-  height: 120px;
+  height: 100px;
   overflow: hidden;
   line-height: 0;
   pointer-events: none;
@@ -64,7 +69,7 @@ body {
 .wave svg {
   display: block;
   width: 100%;
-  height: 120px;
+  height: 100px;
 }
 
 .wave path {
@@ -270,7 +275,7 @@ section.reportes .reportes-contenedor .reporte-card button:hover {
 }
 
 .aliados .logos a {
-  flex: 1 1 120px;  /*cada logo el mismo tamaño */
+  flex: 1 1 120px; 
   display: flex;
   justify-content: center;
   align-items: center;
