--- a/css/donar.css
+++ b/css/donar.css
@@ -1,4 +1,3 @@
-/*Fuente general*/
 body {
   font-family: 'Poppins';
   margin: 0;
@@ -9,19 +8,24 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 60px 11%;
+  padding: 40px 11% 20px 11%;
   position: relative;
   overflow: hidden; /*Oculta contenido que sobresalga del contenedor*/
 }
 
 /*Texto*/
 .hero .texto {
-  width: 50%;
+  width: clamp(200px, 50%, 600px);
   text-align: left;
+  font-size: clamp(1rem, 1.5vw, 1.2rem);
+  position: relative; 
+  top: -80px;
+  right: 40px;
 }
 
+
 .hero .texto h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 900;
   margin-bottom: 10px;
   color: #000000;
@@ -35,34 +39,34 @@ body {
 
 /*Imagen perro y gato*/
 .hero .imagen {
-  width: 50%;
+  width: 23%;
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: scale(1);
 }
 
 .hero .imagen img {
   max-width: 100%;
   height: auto;
   object-fit: contain;
+  transform: scale(1.8) translateX(-40px) translateY(-20px); 
 }
 
 /*Efecto curva*/
 .wave {
   position: absolute;
-  bottom: -2px;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 150px;
+  height: 100px;
   overflow: hidden;
-  line-height: 0;
-  pointer-events: none;
 }
 
 .wave svg {
   display: block;
   width: 100%;
-  height: 150px;
+  height: 100%;
 }
 
 .wave path {
@@ -70,7 +74,8 @@ body {
   stroke: none;
 }
 
-/*SECCION DONACIONES*/
+
+/*Sección donaciones*/
 .donacion h2{
 font-size: 1.6rem;
 margin-bottom: 2rem;
@@ -122,7 +127,7 @@ margin-bottom: 2rem;
 
 .metodo strong {
 
-  margin-top: 40px; /* Aumenta la separación entre la imagen y el texto */
+  margin-top: 40px;/*Separación entre la imagen y el texto*/
   font-size: 15px;
   color: #000000;
   text-align: center;
@@ -135,7 +140,7 @@ margin-bottom: 2rem;
   line-height: 1.4;
 }
 
-/*VIDEO*/
+/*Video*/
 .video-donaciones {
   max-width: 900px;
   margin: 60px auto;
@@ -157,7 +162,7 @@ margin-bottom: 2rem;
   transform: scale(1.02);
 }
 
-/*MENU LISTA DONAR*/
+/*Menu lista donar*/
 .ayuda h3{
 font-size: 1.6rem;
 margin-bottom: 2rem;
@@ -175,7 +180,7 @@ margin-bottom: 2rem;
 .check-list {
   list-style: none;
   padding: 0;
-  margin: 0 auto;
+  margin: 0 auto 200px auto;
   max-width: 600px;
   text-align: left;
   border-radius: 12px;
