--- a/css/header.css
+++ b/css/header.css
@@ -24,28 +24,28 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;  
-  margin: 0 auto;     
-  width: 100%;
+  width: 100%;          
+  margin: 0;            
+  padding: 0 2rem;      
   box-sizing: border-box;
-  white-space: nowrap; /*Evita que el texto quede en varias lineas*/
+  white-space: nowrap;
 }
+
 .hero {
   padding-top: 180px;
 }
 
 /*Titulo*/
 nav h1 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 600;
   display: flex;
   align-items: center;
   gap: 8px;
-  color: #000000;
-  margin: 0;
-  margin-left: -20rem;
-  margin-right: 50rem;
+  color: #000;
+  margin: 0; 
 }
+
 
 /*Menu principal*/
 nav ul {
