--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 8rem 0 10rem 0;
+  margin: 8rem 0 18rem 0;
   text-align: center;
 }
 
@@ -38,7 +38,7 @@ body {
 .login-img img {
   position: absolute;
   right: -420px;
-  top: 0;
+  top: -21px;
   width:585px;
   height: auto;
   z-index: 5; 
