--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ body {
   padding: 0;
   background-color: #ffffff;
   color: #000000;
+  font-size: 100%;
 }
+
 
 .hero {
   background: #D9EEFF;
@@ -15,14 +17,14 @@ body {
   padding: 0% 10%;
   position: relative;
   overflow: hidden; /*Oculta contenido que sobresalga del contenedor*/
-  height: 460px; 
+  height: 360px; 
 }
 
 /*Texto*/
 .hero .texto {
   width: 45%;
   text-align: left;
-  margin-top: -150px;
+  margin-top: -190px;
 }
 
 .hero .texto h2 {
@@ -42,6 +44,7 @@ body {
 /*Imagen perro y gato*/
 .hero .imagen {
   width: 80%;
+  transform: scale(1.3);
   display: flex;
   justify-content: center;
   align-items: center;
