--- a/css/procesoAdopcion.css
+++ b/css/procesoAdopcion.css
@@ -2,16 +2,19 @@
   background: #D9D7F1;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 60px 11%;
+  justify-content: center;   
+  gap: 300px; 
+  padding: 0% 10%;
   position: relative;
   overflow: hidden; /*Oculta contenido que sobresalga del contenedor*/
+  height: 360px; 
 }
 
 /*Texto*/
 .hero .texto {
   width: 45%;
   text-align: left;
+  margin-top: -190px;
 }
 
 .hero .texto h2 {
@@ -19,6 +22,7 @@
   font-weight: 900;
   margin-bottom: 10px;
   color: #000000;
+  white-space: nowrap; 
 }
 
 .hero .texto p {
@@ -29,16 +33,18 @@
 
 /*Imagen perro y gato*/
 .hero .imagen {
-  width: 45%;
+  width: 80%;
+  transform: scale(1.3);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .hero .imagen img {
-  max-width: 100%;
+  max-width: 95%;
   height: auto;
   object-fit: contain;
+  transform: translateY(-80px);
 }
 
 /*Efecto curva*/
@@ -47,7 +53,7 @@
   bottom: -2px;
   left: 0;
   width: 100%;
-  height: 150px;
+  height: 100px;
   overflow: hidden;
   line-height: 0;
   pointer-events: none;
@@ -56,7 +62,7 @@
 .wave svg {
   display: block;
   width: 100%;
-  height: 150px;
+  height: 100px;
 }
 
 .wave path {
