--- a/css/registro.css
+++ b/css/registro.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 4.7rem 0 10rem 0;
+  margin: 4.7rem 0 15rem 0;
   text-align: center;
 }
 
@@ -35,10 +35,13 @@ body {
 }
 
 /*Imagen*/
+.registro-img {
+  position: relative; 
+}
 .registro-img img {
   position: absolute;
-  right: -420px;
-  top: 0;
+  right: -450px;
+  top: -516PX;
   width:585px;
   height: auto;
   z-index: 5; 
@@ -112,4 +115,51 @@ form input:focus {
   color: #700015;
   text-align: center;
   min-height: 1.2rem;
+}
+
+/*WEB RESPONSIVA PARA CELULARES 768PX*/
+@media (max-width: 768px) {
+   .Registrar {
+    flex-direction: column;
+    width: 80%;
+    min-height: auto;
+    padding: 2rem 1.5rem;
+  }
+
+  form {
+    width: 90%;
+  }
+
+  form input {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  form label {
+    font-size: 1.05rem;
+  }
+
+  .registro-img {
+    display: none;
+  }
+}
+
+/*WEB RESPONSIVA PARA PANTALLAS ENTRE 769px y 1024px*/
+@media (min-width: 769px) and (max-width: 1024px) {
+  .Registrar {
+    flex-direction: row; 
+    width: 80%;
+    padding: 2.5rem;
+    gap: 2rem;
+  }
+
+  .registro-img {
+    display: block;
+    position: relative;
+  }
+
+  .registro-img img {
+
+  display: none;
+  }
 }
